# suvtk

./: .buildinfo  .gitignore  README.md  TODO.md  example.src  gb_submitter.py  gbk2tbl.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  publish.yml  release.yml  test.yml
_modules/: index.html
_modules/suvtk/: cli.html  co_occurrence.html  download_database.html  features.html  table2asn.html  utils.html  virus_info.html
_sources/help/: gbk2tbl.md.txt  table2asn.md.txt  virus-info.md.txt
_sources/source/: modules.rst.txt
_static/: suvtk_diagram.drawio
docs/: conf.py  index.rst  requirements.txt
docs/_static/: suvtk_diagram.drawio
docs/help/: co-occurrence.md  comments.md  features.md  gbk2tbl.md  segment-info.md  table2asn.md  taxonomy.md  virus-info.md
docs/source/: suvtk.rst
gb_submitter/: __init__.py  cli.py  co_occurrence.py  comments.py  features.py  gb_submitter.py  gbk2tbl.py  table2asn.py  taxonomy.py  utils.py
gb_submitter/data/: genome_types.tsv
gb_submitter/helper_scripts/: get_genome_types.R  get_segmented_viruses.R
help/: co-occurrence.html  comments.html  features.html  gbk2tbl.html  table2asn.html  taxonomy.html  virus-info.html
source/: modules.html  suvtk.html
suvtk/: __init__.py  cli.py  co_occurrence.py  comments.py  download_database.py  features.py  gbk2tbl.py  segment_info.py  table2asn.py  taxonomy.py  utils.py  virus_info.py
suvtk/data/: genome_types.tsv  segmented_viruses.tsv
suvtk/helper_scripts/: get_genome_types.R
test_examples/: test.out  test_suvtk.py
test_examples/input/: YNP_partiti.fasta
test_examples/output/: co_occurrence_results_correlation_matrix.tsv  test_abundance.tsv  test_assembly.tsv  test_miuvig.tsv
tests/: test_gb_submitter.py  test_suvtk.py
