[project]
name = "gb_submitter"
version = "0.1"
description = "Tool to submit viral sequences to Genbank."
readme = "README.md"
authors = [{name = "Lander De Coninck"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "biopython>=1.83",
    "click",
    "pandas>=2.0.3",
    "pyrodigal-gv>=0.3.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/LanderDC/gb_submitter"
Changelog = "https://github.com/LanderDC/gb_submitter/releases"
Issues = "https://github.com/LanderDC/gb_submitter/issues"
CI = "https://github.com/LanderDC/gb_submitter/actions"

[project.scripts]
gb_submitter = "gb_submitter.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
